atualização do codigo

--- a/1° Trimestre 2025/Exercícios 1 valor 8 pontos/Exercício01.html
+++ b/1° Trimestre 2025/Exercícios 1 valor 8 pontos/Exercício01.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
-<title>Exercício 01</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<body>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Exercício 01</title>
     <h1>Fundamentos de Web Design II</h1>
     <script>
         window.alert("Pressione o botão Ok para visualizar o nome da disciplina"); </script>
-</body>
-
+</head>
 </html>
