--- a/1° Trimestre 2025/Exercícios 1 valor 8 pontos/Exercício02.html
+++ b/1° Trimestre 2025/Exercícios 1 valor 8 pontos/Exercício02.html
@@ -6,11 +6,13 @@
     <title>Exercício 02</title>
 <script>
    function enviar() {
-   }
+
     if (window.confirm("Você gostaria de saber o nome desta disciplina?")) {
         window.alert(" Fundamentos de Web Design II");
     } else {
         window.alert("Caso queira visualizar o nome da disciplina, atualize a página novamente");
     }
+}
 </script> 
+</head>
 </html>
